# david.sferruzza.fr.old

./: .gitignore  LICENSE  README.md  david-sferruzza-fr.cabal  site.hs
assets/css/: main.css
pages/: index.md
posts/: 2014-06-18-new-blog-with-hakyll.md  2014-08-18-how-to-install-commafeed-rss-reader.md  2015-09-19-un-peu-de-programmation-fonctionnelle-en-js.md  2016-05-10-conf-gerer-erreurs-scala-devoxxfr.md
templates/: archive.html  default.html  post.html  postList.html  postListItem.html
