name:                david-sferruzza-fr
version:             1.0.0
synopsis:            My personnal website
description:         My personnal website
homepage:            http://david.sferruzza.fr
-- license:             
license-file:        LICENSE
author:              David Sferruzza
maintainer:          david.sferruzza@gmail.com
copyright:           2014 David Sferruzza
category:            Personal
build-type:          Simple
cabal-version:       >=1.10

executable david-sferruzza-fr
  main-is:             site.hs
  build-depends:       base >=4.6 && <4.7
                     , hakyll == 4.5.3.0
  ghc-options:         -O3 -Wall -threaded
  default-language:    Haskell2010
